--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+div {
+  border: 1px solid red;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -14,6 +17,7 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -28,4 +32,15 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+.logo {
+  display: flex;
+}
+.logo_place_header {
+  width: 183px;
+  height: 32px;
+  background-image: url(../images/logo_place_header.svg);
+  display: flex;
+  padding-left: 64px;
+  padding-top: 30px;
 }
