--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 div {
-  border: 1px solid red;
+  border: 1px solid purple;
 }
 .page {
   min-width: 1100px;
@@ -17,13 +17,11 @@ div {
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
-  display: flex;
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+  margin-bottom: 0;
+  background-color: #f2f2f2;
+  /*display: flex;*/
+  position: relative;
+  /*align-items:center;*/
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -35,12 +33,46 @@ div {
 }
 .logo {
   display: flex;
-}
-.logo_place_header {
   width: 183px;
   height: 32px;
   background-image: url(../images/logo_place_header.svg);
-  display: flex;
+  background-repeat: no-repeat;
+}
+.logo_place_header {
+  margin: 30px 64px auto;
+  position: absolute;
+}
+.header__title {
+  position: absolute;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
   padding-left: 64px;
-  padding-top: 30px;
+  align-items: center;
+  z-index: 2;
+}
+.header__subtitle{
+  line-height: 25px;
+  font-size: 18px;
+  width: 338px;
+  margin: 30px 64px auto;
+}
+.header__square-pic{
+  height: 568px;
+  width: 568px;
+  background-color: #2f80ed;
+  right: 0;
+  position: absolute;
+  z-index: 0;
+  top: 64px;
+}
+.header__main-illustration{
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
