--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+a {
+  text-decoration: none;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -86,7 +89,6 @@
   position:relative;
   display: flex;
   justify-content: center;
-  border: 1px solid red;
 }
 .two-columns{
   margin: 0;
@@ -94,4 +96,28 @@
   width: 80%;
   display: flex;
   justify-content: space-between;
+  min-width: 784px;
+}
+.brief{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  height: 100%;
+}
+.paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.span{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.main-text{
+  width: 80%;
+}
+.border{
+  border: 1px solid red;
 }
