--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,14 @@
-/*p, a, h2, div, h1, h3, h4, h5 h6{
+/*p, a, h2, div{
   border: 1px solid red;
 }*/
+a {
+  text-decoration: none;
+  color: #2f80ed;
+}
+p, h1, h2, h3, h4, h5 h6 {
+  margin: 0;
+  padding: 0;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -46,14 +54,12 @@
   width: 730px;
   line-height: 96px;
   font-size: 102px;
-  margin: 0;
   margin-left: 64px;
   font-weight: bold;
   z-index: 3;
 }
 .header__subtitle{
   position: absolute;
-  margin: 0;
   bottom: 30px;
   left: 64px;
   line-height: 25px;
@@ -61,10 +67,6 @@
   font-weight: normal;
   width: 388px;
   z-index: 3;
-}
-.header__link{
-  text-decoration: none;
-  color: #2f80ed;
 }
 .logo {
   width: 183px;
@@ -79,36 +81,36 @@
 /*2 слайд Description*/
 .description{
   margin: 100px auto;
+  position: relative;
   display: flex;
   justify-content: center;
 }
 .two-columns{
+  min-width: 784px;
   width: 80%;
   display: flex;
   justify-content: space-between;
 }
-.two-columns__brief{
+.brief{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   width: 175px;
   margin: 0;
-  color: #2f80ed;
 }
-.two-columns__main-text{
+.main-text{
   width: 80%;
-  min-width: 784px;
 }
-.two-columns__paragraph{
-  margin: 0;
+.paragraph{
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  display: flex;
 }
-article p:not(:first-of-type):not(:last-of-type){
+.paragraph_center{
   margin: 30px auto 30px;
 }
-.two-columns__span{
+.span{
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -139,6 +141,7 @@ article p:not(:first-of-type):not(:last-of-type){
   width: 1100px;
   margin: 0px auto 100px;
   display: flex;
+  position: relative;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -148,26 +151,26 @@ article p:not(:first-of-type):not(:last-of-type){
   display: flex;
   flex-direction: column;
 }
-.table__cell :nth-child(3){
-  margin-bottom: 0;
-}
 .table__heading{
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 .table__text{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
-  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.table__bank{
+  margin-bottom: 0;
 }
 /*4 слайд Feynman*/
 .feynman{
   min-height: 890px;
+  max-height: 890px;
   margin-bottom: 0;
   display: flex;
   flex-direction: column;
@@ -177,6 +180,7 @@ article p:not(:first-of-type):not(:last-of-type){
   background-size: 867px 637px;
   background-repeat: no-repeat;
   position: relative;
+
 }
 .feynman__title{
   position: relative;
@@ -202,8 +206,6 @@ article p:not(:first-of-type):not(:last-of-type){
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
-  text-decoration: none;
-  color: #2f80ed;
 }
 /*5 слайд Kaufman*/
 .kaufman{
@@ -214,10 +216,9 @@ article p:not(:first-of-type):not(:last-of-type){
   color: #ffffff;
   overflow: hidden;
   position: relative;
-  z-index: 1;
+  z-index: -2;
 }
 .kaufman__triangle{
-  background-image: url(../images/kaufman-triangle.svg);
   background-size: cover;
   width: 877px;
   height: 877px;
@@ -227,11 +228,20 @@ article p:not(:first-of-type):not(:last-of-type){
   z-index: -1;
 }
 .section-title_theme_dark{
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
   margin: 90px auto 20px;
-  color: #ffffff;
 }
 .section-subtitle_theme_dark{
-  color: #ffffff;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0 auto 0;
 }
 .table_theme_dark{
   width: 1100px;
@@ -272,48 +282,74 @@ article p:not(:first-of-type):not(:last-of-type){
 .footer__columns{
   display:flex;
   flex-direction:row;
+  position: relative;
   width:90%;
   justify-content: space-between;
 }
-.footer__column{
+.footer__column_content_copyright{
   display: flex;
   flex-direction: column;
-}
-.footer__column_content-copyright{
+  position: relative;
   justify-content: space-between;
   flex-basis: 711px;
 }
-.logo_place_footer {
+/*.logo__place_footer {
   background-image: url(../images/logo_place_footer.svg);
-  height: 35px;
-}
+}*/
 .footer__author{
   margin: 18px 0;
   line-height: 25px;
   font-size:18px;
   font-weight: normal;
 }
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.footer__column_content_social{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
 .footer__column-heading{
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
-  margin-top: 0;
+  top: 0;
   margin-bottom: 20px;
 }
 .footer__column-links{
+  margin: 0 0 10px 0;
+}
+.footer__column-links_nowrap{
   display: flex;
-  flex-direction: column;
   flex-wrap: nowrap;
 }
-.footer__column-link{
+.column_link{
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  text-decoration: none;
-  color: #ffffff;
+}
+.column-link_center{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.column-link_last{
+  margin-bottom: 16px;
 }
 .footer__social-icon{
   width:16px;
   height:16px;
   margin-right: 10px;
 }
+/*.footer__column-links_Instagram{
+  background-image: url(../images/instagram_color_white.svg);
+}
+.footer__column-links_Facebook{
+  background-image: url(../images/facebook_color_white.svg);
+}
+.footer__column-links_ВКонтакте{
+  background-image: url(../images/vk_color_white.svg);
+}*/
+
