--- a/styles/style.css
+++ b/styles/style.css
@@ -105,10 +105,10 @@
   font-size: 24px;
   font-weight: normal;
 }
-article p:not(:first-of-type):not(:last-of-type){
+.two-columns__paragraph:not(:first-of-type):not(:last-of-type){
   margin: 30px auto 30px;
 }
-.two-columns__span{
+.two-columns__span-accent{
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -147,9 +147,6 @@ article p:not(:first-of-type):not(:last-of-type){
   margin-top: 60px;
   display: flex;
   flex-direction: column;
-}
-.table__cell :nth-child(3){
-  margin-bottom: 0;
 }
 .table__heading{
   line-height: 1.15;
@@ -211,7 +208,6 @@ article p:not(:first-of-type):not(:last-of-type){
   align-items: center;
   flex-direction: column;
   background-color: #1f1f1f;
-  color: #ffffff;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -234,30 +230,17 @@ article p:not(:first-of-type):not(:last-of-type){
   color: #ffffff;
 }
 .table_theme_dark{
-  width: 1100px;
   margin: 0px auto 90px;
-  display: flex;
-  position: relative;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 .table__cell_theme_dark{
   width: 200px;
   margin-top: 80px;
-  display: flex;
-  flex-direction: column;
 }
 .table__heading_theme_dark{
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 0;
-  margin-bottom: 20px;
+  color: #ffffff;
 }
 .table__text_theme_dark{
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+  color: #ffffff;
 }
 /*6 слайд Footer*/
 .footer{
@@ -279,7 +262,7 @@ article p:not(:first-of-type):not(:last-of-type){
   display: flex;
   flex-direction: column;
 }
-.footer__column_content-copyright{
+.footer__column_content_copyright{
   justify-content: space-between;
   flex-basis: 711px;
 }
