--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,4 @@
-@import url(../../keyframes/keyframes.css);
+@import url(../../../rotation/rotation.css);
 .kaufman__triangle{
   background-image: url(../../../images/kaufman-triangle.svg);
   background-size: cover;
