--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,4 +1,4 @@
-@import url(../../../keyframes/keyframes.css);
+@import url(../../../rotation/rotation.css);
 .header__square-pic{
   height: 568px;
   width: 568px;
