--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,7 +1,5 @@
-.techniques{
+.video{
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 80%;
-  margin: 0 auto 0 auto;
 }
