--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,19 @@
 @import url(../blocks/description/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/description/__span-accent/two-columns__span-accent.css);
 @import url(../blocks/techniques/techniques.css);
+@import url(../blocks/techniques/__cards/cards.css);
+@import url(../blocks/techniques/__cards/__item/cards__item.css);
+@import url(../blocks/techniques/__cards/__item/__description/cards__description.css);
+@import url(../blocks/techniques/__cards/__item/__image/cards__image.css);
+@import url(../blocks/techniques/__cards/__item/__title/cards__title.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframes/__iframe/video__iframe.css);
+@import url(../blocks/oakley/oakley.css);
+@import url(../blocks/oakley/two-columns.css);
+@import url(../blocks/oakley/__brief/two-columns__brief.css);
+@import url(../blocks/oakley/__main-text/two-columns__main-text.css);
+@import url(../blocks/oakley/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/digits/table.css);
 @import url(../blocks/digits/__cell/table__cell.css);
@@ -35,6 +48,9 @@
 @import url(../blocks/kaufman/__theme/__cell/table__cell_theme_dark.css);
 @import url(../blocks/kaufman/__theme/__heading/table__heading_theme_dark.css);
 @import url(../blocks/kaufman/__theme/__text/table__text_theme_dark.css);
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo-zone/__logo/resources__logo.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
