--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,16 @@
 @import url(../blocks/feynman/__link/feynman__link.css);
 @import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
 @import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__container/__author/khan__author.css);
+@import url(../blocks/khan/__container/__title/khan__title.css);
+@import url(../blocks/khan/__container/__quote/khan__quote.css);
+@import url(../blocks/khan/__container/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__container/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__container/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__container/__book-container/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__container/__book-container/__buy-link/khan__buy-link.css);
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 @import url(../blocks/kaufman/__theme/section-subtitle_theme_dark.css);
