--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,5 +1,5 @@
 .header__main-illustration{
-  background-size: cover;
+  object-fit: cover;
   height: 608px;
   width: 765px;
   position: absolute;
