--- a/blocks/khan/__container/__book-container/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__container/__book-container/__book-pic/khan__book-pic.css
@@ -1,5 +1,6 @@
 .khan__book-pic{
-  width: 608px;
-  height: 620px;
+  object-fit: cover;
+  width: 620px;
+  height: 608px;
   margin-right: 48px;
 }
