--- a/pages/index.css
+++ b/pages/index.css
@@ -2,28 +2,31 @@
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/logo_place_header.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/section-title_theme_dark.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/section-subtitle_theme_dark.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/header/__logo/logo_place_header.css);
+/*@import url(../blocks/header/__logo/logo_place_header.css);*/
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/description/description.css);
-@import url(../blocks/description/two-columns.css);
+@import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/description/__brief/two-columns__brief.css);
 @import url(../blocks/description/__main-text/two-columns__main-text.css);
 @import url(../blocks/description/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/description/__span-accent/two-columns__span-accent.css);
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/techniques/__cards/cards.css);
-@import url(../blocks/techniques/__cards/__item/cards__item.css);
-@import url(../blocks/techniques/__cards/__item/__description/cards__description.css);
-@import url(../blocks/techniques/__cards/__item/__image/cards__image.css);
-@import url(../blocks/techniques/__cards/__item/__title/cards__title.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__item/__description/cards__description.css);
+@import url(../blocks/cards/__item/__image/cards__image.css);
+@import url(../blocks/cards/__item/__title/cards__title.css);
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
 @import url(../blocks/video/__iframes/__iframe/video__iframe.css);
@@ -33,10 +36,10 @@
 @import url(../blocks/oakley/__main-text/two-columns__main-text.css);
 @import url(../blocks/oakley/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/digits/digits.css);
-@import url(../blocks/digits/table.css);
-@import url(../blocks/digits/__cell/table__cell.css);
-@import url(../blocks/digits/__heading/table__heading.css);
-@import url(../blocks/digits/__text/table__text.css);
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__text/table__text.css);
 @import url(../blocks/feynman/feynman.css);
 @import url(../blocks/feynman/__link/feynman__link.css);
 @import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
