--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
   min-height: 350px;
   background-color: #1f1f1f;
   color: #ffffff;
-  padding: 60px 40px;
+  padding: 60px 0 40px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
